force-app/main/default/objects/Product__c/fields/CPQ_Target_MarginD__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Target_MarginD__c</fullName>
    <formula>CPQ_Target_Sell_Price__c - CPQ_Target_Invoice_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Margin($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>