force-app/main/default/objects/Product__c/fields/CPQ_Target_MarginP__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Target_MarginP__c</fullName>
    <formula>CPQ_Target_MarginD__c /  CPQ_Target_Sell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Margin($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>