force-app/main/default/objects/Product__c/fields/CPQ_Target_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Target_Sell_Price__c</fullName>
    <label>Target Sell Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>