force-app/main/default/objects/Product__c/fields/FPQ_MAX_NETT_TICKETING_RELEASE_DATE__c.field-meta.xml
<CustomField>
    <fullName>FPQ_MAX_NETT_TICKETING_RELEASE_DATE__c</fullName>
    <label>Ticketing Release Date</label>
    <type>Date</type>
</CustomField>