force-app/main/default/objects/Product__c/fields/Maximum_Room_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Room_Capacity__c</fullName>
    <label>Maximum Room Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>