force-app/main/default/objects/Product__c/fields/Month_Year1__c.field-meta.xml
<CustomField>
    <fullName>Month_Year1__c</fullName>
    <label>Month/Year1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>April 16</fullName>
            </value>
            <value>
                <fullName>May 16</fullName>
            </value>
            <value>
                <fullName>June 16</fullName>
            </value>
            <value>
                <fullName>July 16</fullName>
            </value>
            <value>
                <fullName>August 16</fullName>
            </value>
            <value>
                <fullName>September 16</fullName>
            </value>
            <value>
                <fullName>October 16</fullName>
            </value>
            <value>
                <fullName>November 16</fullName>
            </value>
            <value>
                <fullName>December 16</fullName>
            </value>
            <value>
                <fullName>January 17</fullName>
            </value>
            <value>
                <fullName>February 17</fullName>
            </value>
            <value>
                <fullName>March 17</fullName>
            </value>
            <value>
                <fullName>April 17</fullName>
            </value>
            <value>
                <fullName>May 17</fullName>
            </value>
            <value>
                <fullName>June 17</fullName>
            </value>
            <value>
                <fullName>July 17</fullName>
            </value>
            <value>
                <fullName>August 17</fullName>
            </value>
            <value>
                <fullName>September 17</fullName>
            </value>
            <value>
                <fullName>October 17</fullName>
            </value>
            <value>
                <fullName>November 17</fullName>
            </value>
            <value>
                <fullName>December 17</fullName>
            </value>
            <value>
                <fullName>January 18</fullName>
            </value>
            <value>
                <fullName>February 18</fullName>
            </value>
            <value>
                <fullName>March 18</fullName>
            </value>
            <value>
                <fullName>April 18</fullName>
            </value>
            <value>
                <fullName>May 18</fullName>
            </value>
            <value>
                <fullName>June 18</fullName>
            </value>
            <value>
                <fullName>July 18</fullName>
            </value>
            <value>
                <fullName>August 18</fullName>
            </value>
            <value>
                <fullName>September 18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>