force-app/main/default/objects/Product__c/fields/Other_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Other_Terms_Conditions__c</fullName>
    <label>Other Terms &amp; Conditions</label>
    <type>TextArea</type>
</CustomField>