force-app/main/default/objects/Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <displayFormat>PR{0000}</displayFormat>
    <label>Product Code</label>
    <type>AutoNumber</type>
</CustomField>