force-app/main/default/objects/Product__c/fields/Rack_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rack_Rate__c</fullName>
    <label>Rack Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>