force-app/main/default/objects/Product__c/fields/Room_Category__c.field-meta.xml
<CustomField>
    <fullName>Room_Category__c</fullName>
    <label>Room Category</label>
    <type>TextArea</type>
</CustomField>