force-app/main/default/objects/Product__c/fields/Room_Upgrades_Available__c.field-meta.xml
<CustomField>
    <fullName>Room_Upgrades_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Room Upgrades Available</label>
    <type>Checkbox</type>
</CustomField>