force-app/main/default/objects/Product__c/fields/Single_Supplement_Cost_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Single_Supplement_Cost_to_customer__c</fullName>
    <inlineHelpText>Single Supplement(Cost to customer)</inlineHelpText>
    <label>Single Supplement(Cost to customer)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>