force-app/main/default/objects/Product__c/fields/Single_Supplement_Net_cost_to_TAD__c.field-meta.xml
<CustomField>
    <fullName>Single_Supplement_Net_cost_to_TAD__c</fullName>
    <description>Single Supplement(Net cost to TAD)</description>
    <inlineHelpText>Single Supplement(Net cost to TAD)</inlineHelpText>
    <label>Single Supplement(Net cost to TAD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>