force-app/main/default/objects/Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Pricing</fullName>
                <default>true</default>
                <label>Pending Pricing</label>
            </value>
            <value>
                <fullName>Priced</fullName>
            </value>
            <value>
                <fullName>Pending Packaging</fullName>
            </value>
            <value>
                <fullName>Packaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>