force-app/main/default/objects/Product__c/fields/STD_OPT__c.field-meta.xml
<CustomField>
    <fullName>STD_OPT__c</fullName>
    <label>STD/OPT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>