force-app/main/default/objects/Product__c/fields/Surcharge_Amount_Other_Days__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Amount_Other_Days__c</fullName>
    <label>Surcharge Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>