force-app/main/default/objects/Product__c/fields/Triple_Share_Available__c.field-meta.xml
<CustomField>
    <fullName>Triple_Share_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triple Share Available</label>
    <type>Checkbox</type>
</CustomField>