force-app/main/default/objects/Product__c/recordTypes/Accom.recordType-meta.xml
<RecordType>
    <fullName>Accom</fullName>
    <active>true</active>
    <label>Accom</label>
</RecordType>