force-app/main/default/objects/Product__c/recordTypes/Cruise.recordType-meta.xml
<RecordType>
    <fullName>Cruise</fullName>
    <active>true</active>
    <label>Cruise</label>
</RecordType>