force-app/main/default/objects/Product__c/recordTypes/Day_Tour.recordType-meta.xml
<RecordType>
    <fullName>Day_Tour</fullName>
    <active>true</active>
    <label>Day Tour</label>
</RecordType>