force-app/main/default/objects/Product__c/recordTypes/Flights_Response.recordType-meta.xml
<RecordType>
    <fullName>Flights_Response</fullName>
    <active>true</active>
    <label>Flights Response</label>
</RecordType>