force-app/main/default/objects/Product__c/recordTypes/S_Over.recordType-meta.xml
<RecordType>
    <fullName>S_Over</fullName>
    <active>true</active>
    <label>S/Over</label>
</RecordType>