force-app/main/default/objects/Product__c/recordTypes/UJ.recordType-meta.xml
<RecordType>
    <fullName>UJ</fullName>
    <active>true</active>
    <label>UJ</label>
</RecordType>